Upload de alterações locais

--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Pizzaria</title>
-        <link rel="stylesheet" href="/front-end/css/style.css" />
-        <link rel="shortcut icon" href="/front-end/img/logo.png" type="image/x-icon" />
+        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon" />
         <link
             href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap"
             rel="stylesheet"
@@ -21,7 +21,7 @@
             <nav>
                 <div class="container">
                     <a href="#" class="logo">
-                        <img src="/front-end/img/logo.png" alt="Logo" />
+                        <img src="../img/logo.png" alt="Logo" />
                     </a>
                     <div class="menu-toggle" id="mobile-menu">
                         <span class="bar1"></span>
@@ -30,10 +30,10 @@
                     </div>
                     <div class="nav-links">
                         <a href="index.html" class="button">Home</a>
-                        <a href="/front-end/html/cardapio.html" class="button">Cardápio</a>
-                        <a href="/front-end/html/carrinho.html" class="button">Carrinho</a>
-                        <a href="/front-end/html/sobre.html" class="button">Sobre Nós</a>
-                        <a href="/front-end/html/perfil.html" class="button">Perfil</a>
+                        <a href="../html/cardapio.html" class="button">Cardápio</a>
+                        <a href="../html/carrinho.html" class="button">Carrinho</a>
+                        <a href="../html/sobre.html" class="button">Sobre Nós</a>
+                        <a href="../html/perfil.html" class="button">Perfil</a>
                     </div>
                 </div>
             </nav>
