--- a/frontend/html/carrinho.html
+++ b/frontend/html/carrinho.html
@@ -138,8 +138,8 @@
             </div>
         </section>
         <footer>
-            <script src="../../back-end/js/carrinho.js"></script>
-            <script src="../../back-end/js/mobile-menu.js"></script>
+            <script src="../../backend/js/carrinho.js"></script>
+            <script src="../../backend/js/mobile-menu.js"></script>
         </footer>
     </body>
 </html>
