--- a/frontend/html/fila.html
+++ b/frontend/html/fila.html
@@ -124,6 +124,6 @@
             </table>
         </section>
 
-        <script src="../../back-end/js/fila.js"></script>
+        <script src="../../backend/js/fila.js"></script>
     </body>
 </html>
