--- a/frontend/html/gerenciamento.html
+++ b/frontend/html/gerenciamento.html
@@ -106,9 +106,9 @@
         </div>
 
         <footer>
-            <script src="../../back-end/js/gerenciamento.js"></script>
-            <script src="../../back-end/js/sessao.js"></script>
-            <script src="../../back-end/js/mobile-menu.js"></script>
+            <script src="../../backend/js/gerenciamento.js"></script>
+            <script src="../../backend/js/sessao.js"></script>
+            <script src="../../backend/js/mobile-menu.js"></script>
         </footer>
     </body>
 </html>
