--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -46,10 +46,10 @@
             <h3>Entregamos em toda Pedra Alta e região</h3>
         </main>
         <div class="pizza-container">
-            <img src="/front-end/img/pizza.png" />
+            <img src="/frontend/img/pizza.png" />
         </div>
         <footer>
-            <script src="/front-end/js/mobile-menu.js"></script>
+            <script src="/frontend/js/mobile-menu.js"></script>
         </footer>
     </body>
 </html>
