--- a/frontend/html/pedido.html
+++ b/frontend/html/pedido.html
@@ -80,8 +80,8 @@
             </div>
         </div>
         <footer>
-            <script src="../../back-end/js/cardapio.js"></script>
-            <script src="../../back-end/js/mobile-menu.js"></script>
+            <script src="../../backend/js/cardapio.js"></script>
+            <script src="../../backend/js/mobile-menu.js"></script>
         </footer>
     </body>
 </html>
