--- a/frontend/html/sobre.html
+++ b/frontend/html/sobre.html
@@ -67,7 +67,7 @@
         </div>
 
         <footer>
-            <script src="../../back-end/js/mobile-menu.js"></script>
+            <script src="../../backend/js/mobile-menu.js"></script>
         </footer>
     </body>
 </html>
